--- a/submit/prj1-sol/README
+++ b/submit/prj1-sol/README
@@ -20,9 +20,12 @@ submit
 
 ### Running Script:
 
-Run the below script for executing the testcases.
+Procedure to run the script for executing the testcases.
 
-./runTests.sh
+mkdir ~/tmp
+cd ~/tmp
+git clone git@github.com:Yoswal/i571.git
+$HOME/tmp/i571/submit/prj1-sol/runTests.sh
 
 
 ### Current Status:
